# vertex_restricted_polygon_aggregation

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md  config.hpp.in
data/: chord_visualizer.py  ilp_visualizer.py
data/relevant_ilp_instances/: bockelscamp_section.csv  bockelskamp_simplfied.csv  selection_1.csv  selection_2.csv  selection_3.csv
extlibs/googletest/: .gitignore
include/: AggregationChordScheme.hpp  AggregationIlpSolver.hpp  BasicDataStructures.hpp  Edge_Data_Storage.hpp  Empty_Triangles.hpp  Geometry.hpp  TriangulationObjects.hpp  basic_geometry.hpp  config.hpp  data_handling.hpp
src/: AggregationChordScheme.cpp  AggregationIlpSolver.cpp  Empty_Triangles.cpp  Geometry.cpp  TriangulationObjects.cpp  basic_geometry.cpp  data_handling.cpp  main.cpp
test/: CMakeLists.txt  ChordTest.cpp  ILPTest.cpp  Triangulations_test.cpp  basic.cpp  correctness_test.cpp  intersection_test.cpp  num_triangles_test.cpp
